--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-    body {
-    color: gray;
-      }
+      .button {
+      display: block;
+      background: #92bb15;
+      width: 15rem;
+      padding: 1rem;
+      border-radius: .4rem;
+      text-align: center;
+      color: #FFF;
+      text-decoration: none;
+      letter-spacing: .1rem;
+    }
   </style>
 </head>
 <body>
 
+  <a class="button" href="https://code-idea.com/">角が丸いボタン</a>
   Learning
 
   Published 21 Dec 2023
